Grant write permission to contents for Pages deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main # Trigger deployment on push to main branch
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
